--- a/index.html
+++ b/index.html
@@ -2,36 +2,35 @@
 <html>
 
 <head>
-    <title>LA TV Shows | Home</title>
-    <meta name="description" content="A Catalog of Shows Set in Los Angeles">
+    <title>Video Game Genres | Home</title>
+    <meta name="description" content="A Catalog of Popular Video Game Genres">
     <link rel="stylesheet" href="style.css" />
     <script type="text/javascript" src="scripts.js"></script>
 </head>
 
 <body>
     <header class="main-header">
-        <h1 class="title">LA TV Shows</h1>
+        <h1 class="title">Video Game Genres</h1>
     </header>
     <div id="card-container">
         
     </div>
     <div class="card" style="display: none;">
         <div class="card-content">
-            <h2>TV Show Title</h2>
-            <img src="" alt="TV Show Poster">
+            <h2>Video Game Genre</h2>
+            <img src="" alt="Video Game Official Art">
             <ul>
-                <li>Bullet Point 1</li>
-                <li>Bullet Point 2</li>
-                <li>Bullet Point 3</li>
+                <li>Released in the period from 1996 to 2011. </li>
+                <li>This game was played by players from around the world. </li>
             </ul>
         </div>
     </div>
     <div class="footer">
-        <button onclick="quoteAlert();">
-            Get A Quote!
+        <button onclick="suggestionTime();">
+            Video Game Recommendation
         </button>
         <button onclick="removeLastCard();">
-            Remove A Card!
+            No Skyrim?
         </button>
     </div>
 </body>
